# hermesagent-taskspine

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  toolsets.py
spider.Web/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
spider.Web/Plaid Docs/: link.md
spider.Web/Plaid Docs/API/: Overview.md
spider.Web/Plaid Docs/Quickstart/: API versioning and changelog.md  Libraries.md  Plaid Postman Collection.md  Quickstart.md  Webhooks.md  glossary.md
spider.Web/config/: Modelfile.deepseek-r1  Modelfile.qwen-fast  models.yaml
spider.Web/data/: benchmark_scores.json  model_suggestions.json  opportunities.json  salesforce_knowledge.yaml  spider-context.md  system_profile.json
spider.Web/data/workflows/: code_review.json  deep_research.json  hitl_deploy.json  market_analysis.json  parallel_research.json  system_health.json
spider.Web/desktop/: Cargo.toml  tauri.conf.json
spider.Web/desktop/src/: main.rs
spider.Web/docs/coinbase/: llms.txt  section_000__code_of_conduct.md  section_001_contributor_code_of_conduct.md  section_002_security.md  section_003_security_policy.md  section_004_agents_actions.md  section_005_architecture_explained.md  section_006_frameworks.md  section_007_edit_env_file_with_your_own_values.md  section_010_navigate_to_the_example_directory.md  section_011_start_the_chatbot.md  section_012_clone_the_repository.md  section_013_install_dependencies_and_build_packages.md  section_014_navigate_to_the_mcp_example_directory.md  section_015_hosting_agents.md  section_016_integrate_langchain_tools.md  section_017_model_context_protocol_mcp_agentkit_exte.md  section_018_prompts_and_models.md  section_020_wallet_management.md  (+2261 more)
spider.Web/keys/: cdp_api_key.json  spiderWeb.json
spider.Web/migrations/: env.py
spider.Web/scripts/: setup.sh  sf_watch.py
spider.Web/tests/: test_scholar_client.py
(+155 files in other folders)
