[package]
name = "spider-web"
version = "2.5.0"
description = "spider.Web — Local multi-agent AI platform"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
